fixed horizontal scroll issue

--- a/mainStyle.css
+++ b/mainStyle.css
@@ -18,8 +18,6 @@ body {
 nav {
     display:flex;
     justify-content:flex-end;
-    padding-left:10px;
-    padding-right:10px;
     position:fixed;
     width:100%;
     right:0;
